# wedefense

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  How_to_debug.html  LICENSE  README.md  contributing.html  faq.html  genindex.html  how_to_debug.html  index.html  install_env.sh  installation.html  job.sh  objects.inv  quick_start.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  support_status.html
.doctrees/: How_to_debug.doctree  contributing.doctree  faq.doctree  how_to_debug.doctree  index.doctree  installation.doctree  quick_start.doctree  support_status.doctree
.doctrees/tutorials/: Explainable-AI-XAI.doctree  augmentation.doctree  calibration.doctree  parameters.doctree  pruning.doctree
.github/workflows/: doc.yml
_sources/: How_to_debug.md.txt  faq.md.txt  how_to_debug.md.txt  index.rst.txt  quick_start.md.txt
_sources/tutorials/: augmentation.ipynb.txt  parameters.md.txt
docs/: README.md  docs-requirements.txt
docs/source/: conf.py  contributing.md  faq.md  index.rst  installation.md  quick_start.md  support_status.md
egs/embedding-visualization/: embedding_visulization_umap.ipynb
tools/: extract_embedding.sh  extract_embedding_time.sh  lab2utt_to_utt2lab.pl  make_feat_list.py  make_lmdb.py  make_raw_list.py  make_shard_list.py  make_shard_list_rttm.py  spk2utt_to_utt2spk.pl  utt2lab_to_lab2utt.pl  utt2spk_to_spk2utt.pl  vector_mean.py  wav2dur.py  wav_to_duration.sh
tutorials/: Explainable-AI-XAI.html  augmentation.html  calibration.html  parameters.html  pruning.html
tutorials/tasks/: detection.html  (+2 more)
(+482 files in other folders)
