[metadata]
name = wedefense
version = 0.0.0
license = Apache Software License
description = Fake detection toolkit
long_description = file: README.md
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >= 3.8
